Remove REST action envelope
